--- a/src/main/resources/templates/search/search-results.html
+++ b/src/main/resources/templates/search/search-results.html
@@ -9,7 +9,7 @@
 
         <div class="card">
             <div class="card-header text-center">
-                <h1 class="card-title" th:text="'Display results with' + ' \'' + ${aname} + '\' ' +'in them:'">Display a name</h1>
+                <h1 class="card-title" th:text="'Displaying results with' + ' \'' + ${aname} + '\' ' +'in them:'">Display a name</h1>
             </div>
             <div class="card-body">
                 <div id="map" style="width:100%; height:400px; margin-left: auto; margin-right: auto"></div>
