--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -27,6 +27,7 @@
                         <div class="text-center">
                             <button class="btn btn-success" type="submit">Search</button>
                         </div>
+                        <h5>Or Search By <a th:href="@{/searchbylists}">List</a></h5>
                     </form>
                 </div>
             </div>
