--- a/src/main/resources/templates/search/search-results.html
+++ b/src/main/resources/templates/search/search-results.html
@@ -18,18 +18,16 @@
                     <input id="location" th:value="${location}" type="hidden"/>
 
                     <script async="async" defer="defer"
-                            src="https://maps.googleapis.com/maps/api/js?key=Your_Key&amp;libraries=places&amp;callback=searchByLocationMap">
+                            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;libraries=places&amp;callback=searchByLocationMap">
                     </script>
                 </div>
 
                 <p th:unless="${anotherlistmodel} and ${anotherlistmodel.size()}">No Results.</p>
-                <script async="async" defer="defer"
-                        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;callback=loadMap">
-                </script>
+
                 <div th:if="${anotherlistmodel} and ${anotherlistmodel.size()}">
 
                     <script async="async" defer="defer"
-                            src="https://maps.googleapis.com/maps/api/js?key=Your_Key&amp;callback=loadMap">
+                            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;libraries=places&amp;callback=loadMap">
                     </script>
 
                     <table class="table table-striped">
