Successfully able to search by checkedboxed features. Cleaned up code.

--- a/src/main/resources/templates/playground/view.html
+++ b/src/main/resources/templates/playground/view.html
@@ -218,7 +218,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">Restroom Changing Station</th>
+                                <th scope="row">Wheelchair Accessible</th>
                                 <td class="text-right">
                                     <span th:if="${playground.specialNeeds.wheelchairAccessible}">
                                         <i class="material-icons" style="font-size:1rem; color:green">check_circle</i>
