--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,15 @@
             </div>
             <div class="card-body">
                 <div id="map" style="width:80%; height:400px; margin-left: auto; margin-right: auto"></div>
-                <script src="https://maps.googleapis.com/maps/api/js?key=Your_Key&amp;libraries=places&amp;callback=searchMap"
+                <!--
+                        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;libraries=places&amp;callback=searchMap"
+                        async="async" defer="defer"></script>
+
+                        THIS WORKS:
+                        <script th:src="@{https://maps.googleapis.com/maps/api/js?key=AIzaSyC7hSUws5hbDKi3JScfBgPEKeGo4EbJb_s&amp;libraries=places&amp;callback=searchMap}"
+                        async="async" defer="defer"></script>
+                        -->
+                <script th:src="@{'https://maps.googleapis.com/maps/api/js?key=' + ${aKey.aKey} + '&amp;libraries=places&amp;callback=searchMap'}"
                         async="async" defer="defer"></script>
             </div>
         </div>
